--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <div class="main-sec">
                 <h3 class="section-title">My failures of <br>previous year</h3>
 
-                <p class="section-description">Contrary to popular belief, Lorem Ipsum is not simply random text.<br> It has
-                    roots in a piece of classical Latin literature from 45 BC, making it<br> over 2000 years old. Richard
+                <p class="section-description">Contrary to popular belief, Lorem Ipsum is not simply random text.<br> It
+                    has
+                    roots in a piece of classical Latin literature from 45 BC, making it<br> over 2000 years old.
+                    Richard
                     McClintock.</p>
                 <ul class="section-list">
                     <li>Contrary to popular belief, is not simply.</li>
@@ -70,7 +72,11 @@
             </div>
 
         </div>
-
+        <!--call me gradient-->
+        <div class="call-gradient">
+            <h2 class="call-head">Alawys Keep a Positive <br>Mindset</h2>
+            <button class="call-button">Call Now</button>
+        </div>
     </main>
     <footer>
 
