--- a/index.html
+++ b/index.html
@@ -78,8 +78,25 @@
             <button class="call-button">Call Now</button>
         </div>
     </main>
-    <footer>
 
+    <footer style="background-color:#151414;">
+
+        <div class="info">
+            <div class="info-left">
+            <h3 class="info-title">Future</h3>
+            <p class="info-description">There are many variations of passages of Lorem Ipsum<br> available, but the
+                majority have suffered alteration in some <br>form, by injected humour, or randomised words</p>
+            <p><span class="contact">Email : info@gmail.com</span></p>
+            <p><span class="contact">Phone : 01500 00 00 00</span></p>
+        </div>
+            <div class="subscribe">
+                <h3 class="title-subscribe">Subscribe</h3>
+                <input class="email" type="email-id" placeholder="your email">
+                <br>
+                <button class="call-button">Subscribe</button>
+
+            </div>
+        </div>
     </footer>
 </body>
 
